Fix after 161e58b (frontend refactor) - table visibility in Monuments Searching

--- a/poznajmy_polskie_zabytki/static/style.css
+++ b/poznajmy_polskie_zabytki/static/style.css
@@ -131,3 +131,14 @@ input[type=submit] {
   align-self: start;
   min-width: 10em;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 5px;
+  text-align: left;
+}
+
